# DotenvPP

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  codecov.yml  complete.md
.github/workflows/: ci.yml  release.yml
benches/: parser_benchmark.rs
crates/dotenvpp-cli/: Cargo.toml  README.md
crates/dotenvpp-cli/src/: main.rs
crates/dotenvpp-cli/tests/: cli.rs
crates/dotenvpp-crypto/: Cargo.toml  README.md
crates/dotenvpp-crypto/src/: lib.rs
crates/dotenvpp-expr/: Cargo.toml  README.md
crates/dotenvpp-expr/src/: lib.rs
crates/dotenvpp-macros/: Cargo.toml  README.md
crates/dotenvpp-macros/src/: lib.rs
crates/dotenvpp-parser/: Cargo.toml  README.md
crates/dotenvpp-parser/src/: error.rs  lib.rs  parser.rs
crates/dotenvpp-parser/src/parser/tests/: basic.rs  blank_lines.rs  comments.rs  double_quotes.rs  edge_cases.rs  escapes.rs  export.rs  mixed.rs  mod.rs  multiline.rs  single_quotes.rs
crates/dotenvpp-parser/tests/parser/: basic.rs  blank_lines.rs  edge_cases.rs  escapes.rs  internals.rs  mixed.rs  mod.rs  single_quotes.rs
crates/dotenvpp-policy/: Cargo.toml  README.md
crates/dotenvpp-policy/src/: lib.rs
crates/dotenvpp-schema/: Cargo.toml  README.md
crates/dotenvpp-schema/src/: lib.rs
crates/dotenvpp-wasm/: Cargo.toml  README.md  package.json
crates/dotenvpp-wasm/playground/: index.html
crates/dotenvpp-wasm/scripts/: fix-package-json.mjs  smoke-bun.mjs  smoke-node.mjs
crates/dotenvpp-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  INTRODUCTION.md  RESEARCH.md  TODO.md
examples/: basic.rs
scripts/: check_workspace_versions.sh  resolve_release_version.sh  update_release_docs.sh
src/: lib.rs
tests/: facade.rs  integration.rs  phase2_6.rs
usage-examples/: .env  .env.local  .env.production  .env.production.local  .gitignore  Cargo.toml  README.md
usage-examples/src/: basic_loading.rs  custom_path.rs  iterator_usage.rs  main.rs
usage-examples/src/scenarios/: 01_basic_loading.rs  02_from_read.rs  03_interpolation.rs  04_layered_env.rs  05_production.rs  06_preview_without_loading.rs  07_error_handling.rs
