[package]
name = "dotenvpp"
version = "0.0.1"
edition = "2021"
description = "Dotenv++: Next-generation environment configuration with typed schemas, encryption, expressions, policies, and WASM support. Written in Rust."
license = "MIT"
repository = "https://github.com/AriajSarkar/DotenvPP"
homepage = "https://github.com/AriajSarkar/DotenvPP"
documentation = "https://docs.rs/dotenvpp"
readme = "README.md"
keywords = ["dotenv", "env", "config", "environment", "secrets"]
categories = ["config", "development-tools"]

[dependencies]
