[package]
name = "dotenvpp-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for parsing, checking, and loading .env files with DotenvPP"
readme = "README.md"

[[bin]]
name = "dotenvpp"
path = "src/main.rs"

[dependencies]
dotenvpp = { workspace = true }
clap     = { workspace = true }

[lints]
workspace = true
