[package]
name = "dotenvpp-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "DotenvPP encryption backends and encrypted .env file format"
readme = "README.md"

[features]
default = ["crypto-crabgraph"]
crypto-crabgraph = ["dep:crabgraph"]
crypto-rustcrypto = [
    "dep:aes-gcm",
    "dep:hkdf",
    "dep:rand_core",
    "dep:sha2",
    "dep:x25519-dalek",
]

[dependencies]
aes-gcm = { workspace = true, optional = true }
base64 = { workspace = true }
crabgraph = { workspace = true, optional = true }
dotenvpp-parser = { workspace = true }
hkdf = { workspace = true, optional = true }
rand_core = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true, optional = true }
thiserror = { workspace = true }
x25519-dalek = { workspace = true, optional = true }
zeroize = { workspace = true }

[lints]
workspace = true
