[package]
name = "dotenvpp-expr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe expression parser and evaluator for DotenvPP computed configuration"
readme = "README.md"

[dependencies]
base64 = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
