[package]
name = "dotenvpp-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core .env parser for DotenvPP — no_std compatible"

[features]
default = ["std"]
std = []

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
