[package]
name = "dotenvpp-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Policy-as-code parser and evaluator for DotenvPP"
readme = "README.md"

[dependencies]
dotenvpp-expr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
